corrigindo algumas falhas nos testes